--- a/index.html
+++ b/index.html
@@ -4,67 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <!-- HEADER -->
 
-    <header>
-      <nav>
-        <a href="#">WEBSTUDIO</a>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Porfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="#"
+          ><span class="header-logo-web">WEB</span
+          ><span class="header-logo-studio">STUDIO</span></a
+        >
+        <ul class="header-list list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="#">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="header-contacts list">
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="header-contacts-item">
+          <a class="header-contacts-link link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
       </ul>
     </header>
 
     <!-- MAIN -->
 
-    <main>
+    <main class="main">
       <!-- Secton 1 -->
 
-      <section>
-        <h1>Effective Solutions <br />for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions <br />for Your Business</h1>
+        <button class="hero-button button" type="button">Order Service</button>
       </section>
 
       <!-- Section 2 -->
 
-      <section>
-        <div>
-          <ul>
-            <li>
-              <h3>Strategy</h3>
-              <p>
+      <section class="feature">
+        <div class="feature-group">
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="feature-item-title list-title">Strategy</h3>
+              <p class="feature-item-text list-text">
                 Our goal is to identify the business <br />problem to walk away
                 with the <br />
                 perfect and creative solution.
               </p>
             </li>
-            <li>
-              <h3>Punctuality</h3>
-              <p>
+            <li class="feature-item">
+              <h3 class="feature-item-title list-title">Punctuality</h3>
+              <p class="feature-item-text list-text">
                 Bring the key message to the <br />brand's audience for the best
                 price <br />
                 within the shortest possible time.
               </p>
             </li>
-            <li>
-              <h3>Diligence</h3>
-              <p>
+            <li class="feature-item">
+              <h3 class="feature-item-title list-title">Diligence</h3>
+              <p class="feature-item-text list-text">
                 Research and confirm brands that <br />present the strongest
                 digital growth <br />opportunities and minimize risk.
               </p>
             </li>
-            <li>
-              <h3>Technologies</h3>
-              <p>
+            <li class="feature-item">
+              <h3 class="feature-item-title list-title">Technologies</h3>
+              <p class="feature-item-text list-text">
                 Design practice focused on digital <br />experiences. We bring
                 forth a deep <br />passion for problem-solving.
               </p>
@@ -75,29 +97,32 @@
 
       <!-- Section 3 -->
 
-      <section>
-        <div>
-          <h2>What Are We Doing</h2>
-          <ul>
-            <li>
+      <section class="doing">
+        <div class="doing-group">
+          <h2 class="doing-title section-title">What are we doing</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
               <img
                 src="images/monitor.jpg"
                 alt="Computer Monitor"
-                width="200"
+                width="360"
+                height="300"
               />
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="images/cellphone-screens.jpg"
                 alt="Multiple Cellphone Screens"
-                width="200"
+                width="360"
+                height="300"
               />
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="images/cellphone.jpg"
                 alt="Holding a Cellphone"
-                width="200"
+                width="360"
+                height="300"
               />
             </li>
           </ul>
@@ -106,49 +131,49 @@
 
       <!-- Section 4 -->
 
-      <section>
-        <div>
-          <h2>Our Team</h2>
-          <ul>
-            <li>
+      <section class="team">
+        <div class="team-group">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-item">
               <img
                 src="images/mark-guerrero.jpg"
                 alt="Mark Guerrero"
-                width="270"
+                width="264"
                 height="260"
               />
-              <h3>Mark Guerrero</h3>
-              <p>Product Designer</p>
+              <h3 class="team-item-title list-title">Mark Guerrero</h3>
+              <p class="team-item-text list-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="images/tom-ford.jpg"
                 alt="Tom Ford"
-                width="270"
+                width="264"
                 height="260"
               />
-              <h3>Tom Ford</h3>
-              <p>Frontend Developer</p>
+              <h3 class="team-item-title list-title">Tom Ford</h3>
+              <p class="team-item-text list-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="images/camila-garcia.jpg"
                 alt="Camila Garcia"
-                width="270"
+                width="264"
                 height="260"
               />
-              <h3>Camila Garcia</h3>
-              <p>Marketing</p>
+              <h3 class="team-item-title list-title">Camila Garcia</h3>
+              <p class="team-item-text list-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="images/daniel-wilson.jpg"
                 alt="Daniel Wilson"
-                width="270"
+                width="264"
                 height="260"
               />
-              <h3>Daniel Wilson</h3>
-              <p>UI Designer</p>
+              <h3 class="team-item-title list-title">Daniel Wilson</h3>
+              <p class="team-item-text list-text">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -157,10 +182,13 @@
 
     <!-- FOOTER -->
 
-    <footer>
-      <div>
-        <a href="#">WEBSTUDIO</a>
-        <p>
+    <footer class="footer">
+      <div class="footer-group">
+        <a class="footer-logo" href="#"
+          ><span class="footer-logo-web">WEB</span
+          ><span class="footer-logo-studio">STUDIO</span></a
+        >
+        <p class="footer-text">
           Increase the flow of customers and <br />
           sales for your business with digital <br />
           marketing & growth solutions.
