redefined classes names

--- a/index.html
+++ b/index.html
@@ -14,79 +14,76 @@
   <body>
     <!-- HEADER -->
 
-    <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="#"
-          ><span class="header-logo-web">WEB</span
-          ><span class="header-logo-studio">STUDIO</span></a
+    <header class="page-header">
+      <nav>
+        <a class="logo-link" href="#"
+          ><span class="logo">WEB</span><span class="studio">STUDIO</span></a
         >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
+        <ul class="nav-menu list">
+          <li>
+            <a class="page current" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          <li>
+            <a class="page" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="#">Contacts</a>
+          <li>
+            <a class="page" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
+      <ul class="contacts-menu list">
+        <li>
+          <a class="item" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
+        <li>
+          <a class="item" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
 
     <!-- MAIN -->
 
-    <main class="main">
+    <main>
       <!-- Secton 1 -->
 
-      <section class="hero">
+      <section class="hero bg-hero">
         <h1 class="hero-title">Effective Solutions <br />for Your Business</h1>
-        <button class="hero-button button" type="button">Order Service</button>
+        <button class="button primary" type="button">Order Service</button>
       </section>
 
       <!-- Section 2 -->
 
-      <section class="feature">
-        <div class="feature-group">
-          <ul class="feature-list list">
-            <li class="feature-item">
-              <h3 class="feature-item-title list-title">Strategy</h3>
-              <p class="feature-item-text list-text">
+      <section class="section">
+        <div class="container">
+          <ul class="benefits list">
+            <li>
+              <h3 class="title">Strategy</h3>
+              <p class="description">
                 Our goal is to identify the business <br />problem to walk away
                 with the <br />
                 perfect and creative solution.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title list-title">Punctuality</h3>
-              <p class="feature-item-text list-text">
+            <li>
+              <h3 class="title">Punctuality</h3>
+              <p class="description">
                 Bring the key message to the <br />brand's audience for the best
                 price <br />
                 within the shortest possible time.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title list-title">Diligence</h3>
-              <p class="feature-item-text list-text">
+            <li>
+              <h3 class="title">Diligence</h3>
+              <p class="description">
                 Research and confirm brands that <br />present the strongest
                 digital growth <br />opportunities and minimize risk.
               </p>
             </li>
-            <li class="feature-item">
-              <h3 class="feature-item-title list-title">Technologies</h3>
-              <p class="feature-item-text list-text">
+            <li>
+              <h3 class="title">Technologies</h3>
+              <p class="description">
                 Design practice focused on digital <br />experiences. We bring
                 forth a deep <br />passion for problem-solving.
               </p>
@@ -97,11 +94,11 @@
 
       <!-- Section 3 -->
 
-      <section class="doing">
-        <div class="doing-group">
-          <h2 class="doing-title section-title">What are we doing</h2>
-          <ul class="doing-list list">
-            <li class="doing-item">
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">What Are We Doing</h2>
+          <ul class="what-we-do list">
+            <li>
               <img
                 src="images/monitor.jpg"
                 alt="Computer Monitor"
@@ -109,7 +106,7 @@
                 height="300"
               />
             </li>
-            <li class="doing-item">
+            <li>
               <img
                 src="images/cellphone-screens.jpg"
                 alt="Multiple Cellphone Screens"
@@ -117,7 +114,7 @@
                 height="300"
               />
             </li>
-            <li class="doing-item">
+            <li>
               <img
                 src="images/cellphone.jpg"
                 alt="Holding a Cellphone"
@@ -131,49 +128,49 @@
 
       <!-- Section 4 -->
 
-      <section class="team">
-        <div class="team-group">
-          <h2 class="team-title section-title">Our Team</h2>
-          <ul class="team-list list">
-            <li class="team-item">
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team list">
+            <li>
               <img
                 src="images/mark-guerrero.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title list-title">Mark Guerrero</h3>
-              <p class="team-item-text list-text">Product Designer</p>
+              <h3 class="name">Mark Guerrero</h3>
+              <p class="position">Product Designer</p>
             </li>
-            <li class="team-item">
+            <li>
               <img
                 src="images/tom-ford.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title list-title">Tom Ford</h3>
-              <p class="team-item-text list-text">Frontend Developer</p>
+              <h3 class="name">Tom Ford</h3>
+              <p class="position">Frontend Developer</p>
             </li>
-            <li class="team-item">
+            <li>
               <img
                 src="images/camila-garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title list-title">Camila Garcia</h3>
-              <p class="team-item-text list-text">Marketing</p>
+              <h3 class="name">Camila Garcia</h3>
+              <p class="position">Marketing</p>
             </li>
-            <li class="team-item">
+            <li>
               <img
                 src="images/daniel-wilson.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title list-title">Daniel Wilson</h3>
-              <p class="team-item-text list-text">UI Designer</p>
+              <h3 class="name">Daniel Wilson</h3>
+              <p class="position">UI Designer</p>
             </li>
           </ul>
         </div>
@@ -182,13 +179,12 @@
 
     <!-- FOOTER -->
 
-    <footer class="footer">
-      <div class="footer-group">
-        <a class="footer-logo" href="#"
-          ><span class="footer-logo-web">WEB</span
-          ><span class="footer-logo-studio">STUDIO</span></a
+    <footer class="page-footer bg-footer">
+      <div>
+        <a class="logo-link" href="#"
+          ><span class="logo">WEB</span><span class="studio-2">STUDIO</span></a
         >
-        <p class="footer-text">
+        <p class="footer-description">
           Increase the flow of customers and <br />
           sales for your business with digital <br />
           marketing & growth solutions.
