--- a/portfolio.html
+++ b/portfolio.html
@@ -13,165 +13,166 @@
   <body>
     <!-- HEADER -->
 
-    <header class="header">
-      <nav class="header-nav">
-        <a class="header-logo" href="#"
-          ><span class="header-logo-web">WEB</span
-          ><span class="header-logo-studio">STUDIO</span></a
+    <header class="page-header">
+      <nav>
+        <a class="logo-link" href="#"
+          ><span class="logo">WEB</span><span class="studio">STUDIO</span></a
         >
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Studio</a>
+        <ul class="nav-menu list">
+          <li>
+            <a class="page current" href="./index.html">Studio</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          <li>
+            <a class="page" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="header-item">
-            <a class="header-link link" href="#">Contacts</a>
+          <li>
+            <a class="page" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
+      <ul class="contacts-menu list">
+        <li>
+          <a class="item" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="header-contacts-item">
-          <a class="header-contacts-link link" href="tel:+110001111111"
-            >+11 (000) 111-11-11</a
-          >
+        <li>
+          <a class="item" href="tel:+110001111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </header>
 
     <!-- MAIN -->
-    <main class="main">
+    <main>
       <!-- Section 1 -->
-      <section class="buttons">
-        <div class="buttons-group">
-          <ul class="buttons-list list">
-            <li class="buttons-item">
-              <button class="buttons-item-button" type="button">All</button>
+      <section>
+        <div class="container">
+          <ul class="filters list">
+            <li>
+              <button class="button filter current" type="button">All</button>
             </li>
-            <li class="buttons-item">
-              <button class="buttons-item-button" type="button">
-                Web Site
-              </button>
+            <li>
+              <button class="button filter" type="button">Web Site</button>
             </li>
-            <li class="buttons-item">
-              <button class="buttons-item-button" type="button">App</button>
+            <li>
+              <button class="button filter" type="button">App</button>
             </li>
-            <li class="buttons-item">
-              <button class="buttons-item-button" type="button">Design</button>
+            <li>
+              <button class="button filter" type="button">Design</button>
             </li>
-            <li class="buttons-item">
-              <button class="buttons-item-button" type="button">
-                Marketing
-              </button>
+            <li>
+              <button class="button filter" type="button">Marketing</button>
             </li>
           </ul>
-        </div>
-      </section>
-      <!-- Section 2 -->
-      <section class="portfolio">
-        <div class="portfolio-group">
-          <ul class="portfolio-list list">
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-banking-app.jpg"
-                alt="Banking App Interface"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">
-                Banking App Interface Concept
-              </h3>
-              <p class="portfolio-item-text list-text">App</p>
+          <!-- Section 2 -->
+          <ul class="projects list">
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-banking-app.jpg"
+                  alt="Banking App Interface"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Banking App Interface Concept</h2>
+                <p class="type">App</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-cashless.jpg"
-                alt="Cellphone with QR Codes"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Cashless Payment</h3>
-              <p class="portfolio-item-text list-text">Marketing</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-cashless.jpg"
+                  alt="Cellphone with QR Codes"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Cashless Payment</h2>
+                <p class="type">Marketing</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-meditation.jpg"
-                alt="Laptop and cellphone"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Meditation App</h3>
-              <p class="portfolio-item-text list-text">App</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-meditation.jpg"
+                  alt="Laptop and cellphone"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Meditation App</h2>
+                <p class="type">App</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-taxi.jpg"
-                alt="Drive Wheel"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Taxi Service</h3>
-              <p class="portfolio-item-text list-text">Marketing</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-taxi.jpg"
+                  alt="Drive Wheel"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Taxi Service</h2>
+                <p class="type">Marketing</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-screen-illustrations.jpg"
-                alt="Cellphone Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">
-                Screen Illustrations
-              </h3>
-              <p class="portfolio-item-text list-text">Design</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-screen-illustrations.jpg"
+                  alt="Cellphone Screen Illustrations"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Screen Illustrations</h2>
+                <p class="type">Design</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-online-courses.jpg"
-                alt="A girl wearing orange T-shrit"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Online Courses</h3>
-              <p class="portfolio-item-text list-text">Marketing</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-online-courses.jpg"
+                  alt="A girl wearing orange T-shrit"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Online Courses</h2>
+                <p class="type">Marketing</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-instagram-stories.jpg"
-                alt="Instagram stories"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">
-                Instagram Stories Concept
-              </h3>
-              <p class="portfolio-item-text list-text">Design</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-instagram-stories.jpg"
+                  alt="Instagram stories"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Instagram Stories Concept</h2>
+                <p class="type">Design</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-organic-foods.jpg"
-                alt="Lady carrying a bag of foods"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Organic Foods</h3>
-              <p class="portfolio-item-text list-text">Web Site</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-organic-foods.jpg"
+                  alt="Lady carrying a bag of foods"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Organic Food</h2>
+                <p class="type">Web Site</p>
+              </a>
             </li>
-            <li class="portfolio-item">
-              <img
-                src="images/hw2-fresh-coffee.jpg"
-                alt="Coffee Art"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-item-title list-title">Fresh Coffee</h3>
-              <p class="portfolio-item-text list-text">Web Site</p>
+            <li>
+              <a href="" class="project">
+                <img
+                  src="images/hw2-fresh-coffee.jpg"
+                  alt="Coffee Art"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="name">Fresh Coffee</h2>
+                <p class="type">Web Site</p>
+              </a>
             </li>
           </ul>
         </div>
@@ -180,13 +181,12 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
-      <div class="footer-group">
-        <a class="footer-logo" href="#"
-          ><span class="footer-logo-web">WEB</span
-          ><span class="footer-logo-studio">STUDIO</span></a
+    <footer class="page-footer bg-footer">
+      <div>
+        <a class="logo-link" href="#"
+          ><span class="logo">WEB</span><span class="studio-2">STUDIO</span></a
         >
-        <p class="footer-text">
+        <p class="footer-description">
           Increase the flow of customers and <br />
           sales for your business with digital <br />
           marketing & growth solutions.
