addition of bg team and project type

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <!-- Section 4 -->
 
-      <section class="section">
+      <section class="section bg-team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team list">
